# player

./: CMakeLists.txt
src/: amcp.cpp  amcp.hpp  main.cpp  osc.hpp  player.cpp  types.hpp
